--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -28,16 +28,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Depois de discutir nos capítulos anteriores as bibliotecas Python responsáveis pelos dados\n",
-    "processamento, agora é a vez de você conhecer uma biblioteca que cuida da visualização. Esse\n",
-    "biblioteca é matplotlib.\n",
+    "Depois de discutir nos capítulos anteriores as bibliotecas Python responsáveis pelos dados processamento, agora é a vez de você conhecer uma biblioteca que cuida da visualização. Esse biblioteca é matplotlib.\n",
     "\n",
     "\n",
-    "A visualização de dados é muitas vezes subestimada na análise de dados, mas na verdade é uma\n",
-    "fator muito importante porque a representação de dados incorreta ou ineficiente pode arruinar um\n",
-    "caso contrário excelente análise. Neste capítulo, você descobrirá os vários aspectos do\n",
-    "biblioteca matplotlib, incluindo como ela é estruturada e como maximizar o potencial que\n",
-    "oferece."
+    "A visualização de dados é muitas vezes subestimada na análise de dados, mas na verdade é uma fator muito importante porque a representação de dados incorreta ou ineficiente pode arruinar um caso contrário excelente análise. Neste capítulo, você descobrirá os vários aspectos do biblioteca matplotlib, incluindo como ela é estruturada e como maximizar o potencial que oferece."
    ]
   },
   {
@@ -51,12 +45,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "matplotlib é uma biblioteca Python especializada no desenvolvimento de gráficos bidimensionais\n",
-    "gráficos (incluindo gráficos 3D). Nos últimos anos, tem sido difundido no meio científico e\n",
-    "círculos de engenharia (http://matplolib.org).\n",
+    "matplotlib é uma biblioteca Python especializada no desenvolvimento de gráficos bidimensionais gráficos (incluindo gráficos 3D). Nos últimos anos, tem sido difundido no meio científico e círculos de engenharia (http://matplolib.org).\n",
     "\n",
-    "Entre todas as características que a tornaram a ferramenta mais utilizada na área gráfica\n",
-    "representação de dados, há alguns que se destacam:\n",
+    "Entre todas as características que a tornaram a ferramenta mais utilizada na área gráfica representação de dados, há alguns que se destacam:\n",
     "\n",
     "• Extrema simplicidade na sua utilização\n",
     "• Desenvolvimento gradual e visualização interativa de dados\n",
@@ -64,77 +55,44 @@
     "• Maior controle sobre os elementos gráficos\n",
     "• Exporte para vários formatos, como PNG, PDF, SVG e EPS\n",
     "\n",
-    "matplotlib é projetado para reproduzir tanto quanto possível um ambiente semelhante ao\n",
-    "MATLAB em termos de visualização gráfica e forma sintática. Esta abordagem provou\n",
-    "bem-sucedido, pois soube explorar a experiência do software (MATLAB) que\n",
-    "está no mercado há vários anos e hoje é difundido em todos os profissionais técnico-científicos\n",
-    "círculos. O matplotlib não é apenas baseado em um esquema conhecido e bastante familiar\n",
-    "para a maioria dos especialistas na área, mas também explora as otimizações que ao longo do\n",
-    "anos levaram a uma dedutibilidade e simplicidade na sua utilização, o que torna esta biblioteca também\n",
-    "uma excelente escolha para aqueles que abordam a visualização de dados pela primeira vez, especialmente\n",
-    "aqueles sem nenhuma experiência com aplicativos como MATLAB ou similares."
+    "matplotlib é projetado para reproduzir tanto quanto possível um ambiente semelhante ao MATLAB em termos de visualização gráfica e forma sintática. Esta abordagem provou bem-sucedido, pois soube explorar a experiência do software (MATLAB) que está no mercado há vários anos e hoje é difundido em todos os profissionais técnico-científicos círculos. O matplotlib não é apenas baseado em um esquema conhecido e bastante familiar para a maioria dos especialistas na área, mas também explora as otimizações que ao longo dos anos levaram a uma dedutibilidade e simplicidade na sua utilização, o que torna esta biblioteca também uma excelente escolha para aqueles que abordam a visualização de dados pela primeira vez, especialmente aqueles sem nenhuma experiência com aplicativos como MATLAB ou similares."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Além da simplicidade e dedutibilidade, a biblioteca matplotlib herdou\n",
-    "interatividade do MATLAB também. Ou seja, o analista pode inserir comando após\n",
-    "comando para controlar o desenvolvimento gradual de uma representação gráfica de dados.\n",
-    "Este modo é adequado para as abordagens mais interativas do Python como o IPython\n",
-    "QtConsole e IPython Notebook (consulte o Capítulo 2), fornecendo assim um ambiente\n",
-    "para análise de dados que tem pouco a invejar de outras ferramentas como Mathematica, IDL ou\n",
-    "MATLAB."
+    "Além da simplicidade e dedutibilidade, a biblioteca matplotlib herdou interatividade do MATLAB também. Ou seja, o analista pode inserir comando após comando para controlar o desenvolvimento gradual de uma representação gráfica de dados. Este modo é adequado para as abordagens mais interativas do Python como o IPython QtConsole e IPython Notebook (consulte o Capítulo 2), fornecendo assim um ambiente para análise de dados que tem pouco a invejar de outras ferramentas como Mathematica, IDL ou MATLAB."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A genialidade de quem desenvolveu esta bela biblioteca foi usar e incorporar\n",
-    "as coisas boas atualmente disponíveis e em uso na ciência. Isso não é apenas limitado, como nós\n",
-    "vimos, ao modo de operação do MATLAB e similares, mas também aos modelos de\n",
-    "formatação de expressões científicas e símbolos representados pelo LaTeX. Por causa de sua\n",
-    "grande capacidade de exibição e apresentação de expressões científicas, o LaTeX tem sido um\n",
-    "elemento insubstituível em qualquer publicação ou documentação científica, onde a necessidade de\n",
-    "representar visualmente expressões como integrais, somatórios e derivadas é obrigatório.\n",
-    "Portanto matplotlib integra este notável instrumento para melhorar a\n",
-    "capacidade representativa das cartas."
+    "A genialidade de quem desenvolveu esta bela biblioteca foi usar e incorporar as coisas boas atualmente disponíveis e em uso na ciência. Isso não é apenas limitado, como nós vimos, ao modo de operação do MATLAB e similares, mas também aos modelos de formatação de expressões científicas e símbolos representados pelo LaTeX. Por causa de sua grande capacidade de exibição e apresentação de expressões científicas, o LaTeX tem sido um elemento insubstituível em qualquer publicação ou documentação científica, onde a necessidade de representar visualmente expressões como integrais, somatórios e derivadas é obrigatório. \n",
+    "\n",
+    "Portanto matplotlib integra este notável instrumento para melhorar a capacidade representativa das cartas."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Além disso, você não deve esquecer que o matplotlib não é um aplicativo separado, mas\n",
-    "uma biblioteca de uma linguagem de programação como Python. Portanto, também aproveita ao máximo o\n",
-    "potencial que as linguagens de programação oferecem. matplotlib parece uma biblioteca de gráficos\n",
-    "que permite gerenciar programaticamente os elementos gráficos que compõem um gráfico\n",
-    "para que a exibição gráfica possa ser controlada em sua totalidade. A capacidade de programar\n",
-    "a representação gráfica permite o gerenciamento da reprodutibilidade dos dados\n",
-    "representação em vários ambientes e especialmente quando você faz alterações ou\n",
-    "quando os dados são atualizados."
+    "Além disso, você não deve esquecer que o matplotlib não é um aplicativo separado, mas uma biblioteca de uma linguagem de programação como Python. Portanto, também aproveita ao máximo o potencial que as linguagens de programação oferecem. matplotlib parece uma biblioteca de gráficos que permite gerenciar programaticamente os elementos gráficos que compõem um gráfico para que a exibição gráfica possa ser controlada em sua totalidade. A capacidade de programar a representação gráfica permite o gerenciamento da reprodutibilidade dos dados representação em vários ambientes e especialmente quando você faz alterações ou quando os dados são atualizados."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Além disso, como matplotlib é uma biblioteca Python, ela permite que você explore todo o\n",
-    "potencial de outras bibliotecas disponíveis para qualquer desenvolvedor que implemente com esta\n",
-    "linguagem. De fato, no que diz respeito à análise de dados, o matplotlib normalmente coopera com um conjunto\n",
-    "de outras bibliotecas como NumPy e pandas, mas muitas outras bibliotecas podem ser integradas\n",
-    "sem qualquer problema."
+    "Além disso, como matplotlib é uma biblioteca Python, ela permite que você explore todo o potencial de outras bibliotecas disponíveis para qualquer desenvolvedor que implemente com esta linguagem. De fato, no que diz respeito à análise de dados, o matplotlib normalmente coopera com um conjunto de outras bibliotecas como NumPy e pandas, mas muitas outras bibliotecas podem ser integradas sem qualquer problema."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finalmente, as representações gráficas obtidas através da codificação com esta biblioteca podem ser\n",
-    "exportados nos formatos gráficos mais comuns (como PNG e SVG) e depois usados\n",
-    "em outras aplicações, documentação, páginas web, etc."
+    "Finalmente, as representações gráficas obtidas através da codificação com esta biblioteca podem ser exportados nos formatos gráficos mais comuns (como PNG e SVG) e depois usados  em outras aplicações, documentação, páginas web, etc."
    ]
   },
   {
@@ -148,23 +106,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Uma das principais tarefas que o matplotlib deve assumir é fornecer um conjunto de funções e ferramentas\n",
-    "que permitem a representação e manipulação de uma Figura (o objeto principal), juntamente com\n",
-    "todos os objetos internos de que é composto. No entanto, matplotlib não apenas lida com\n",
-    "gráficos, mas também fornece todas as ferramentas para o tratamento de eventos e a capacidade de animar\n",
-    "gráficos. Portanto, graças a esses recursos adicionais, o matplotlib prova ser capaz de\n",
-    "produzindo gráficos interativos com base nos eventos acionados pressionando uma tecla no\n",
-    "teclado ou no movimento do mouse."
+    "Uma das principais tarefas que o matplotlib deve assumir é fornecer um conjunto de funções e ferramentas que permitem a representação e manipulação de uma Figura (o objeto principal), juntamente com todos os objetos internos de que é composto. No entanto, matplotlib não apenas lida com gráficos, mas também fornece todas as ferramentas para o tratamento de eventos e a capacidade de animar gráficos. Portanto, graças a esses recursos adicionais, o matplotlib prova ser capaz de produzindo gráficos interativos com base nos eventos acionados pressionando uma tecla no teclado ou no movimento do mouse."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A arquitetura do matplotlib é estruturada logicamente em três camadas, que são\n",
-    "colocados em três níveis diferentes (consulte a Figura 7-2). A comunicação é unidirecional,\n",
-    "ou seja, cada camada pode se comunicar com a camada subjacente, enquanto as camadas inferiores\n",
-    "não pode se comunicar com os superiores."
+    "A arquitetura do matplotlib é estruturada logicamente em três camadas, que são colocados em três níveis diferentes. A comunicação é unidirecional, ou seja, cada camada pode se comunicar com a camada subjacente, enquanto as camadas inferiores não pode se comunicar com os superiores."
    ]
   },
   {
@@ -172,7 +121,9 @@
    "metadata": {},
    "source": [
     "As três camadas da arquitetura matplotlib\n",
+    "\n",
     "As três camadas são as seguintes:\n",
+    "\n",
     "• Scripts\n",
     "• Artista\n",
     "• Processo interno"
@@ -188,63 +139,56 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "#### Artist Layer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As an intermediate layer, we have a layer called Artist. All the elements that make up a\n",
-    "chart, such as the title, axis labels, markers, etc., are instances of the Artist object. Each of\n",
-    "these instances plays its role within a hierarchical structure\n",
+    "No diagrama da arquitetura matplotlib, a camada que funciona no nível mais baixo é a camada Back-end. Essa camada contém as APIs matplotlib, um conjunto de classes que executam o papel de implementação dos elementos gráficos em um nível baixo.\n",
     "\n",
-    "There are two Artist classes: primitive and composite.\n",
+    "• FigureCanvas é o objeto que incorpora o conceito de área de desenho.\n",
+    "• Renderer é o objeto que desenha no FigureCanvas.\n",
+    "• Evento é o objeto que manipula as entradas do usuário (teclado e eventos do mouse)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Camada do Artista"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como camada intermediária, temos uma camada chamada Artista. Todos os elementos que compõem um gráfico, como título, rótulos de eixo, marcadores, etc., são instâncias do objeto Artista. Cada um de essas instâncias desempenham seu papel dentro de uma estrutura hierárquica\n",
     "\n",
-    "• The primitive artists are individual objects that constitute the basic\n",
-    "elements to form a graphical representation in a plot, for example a\n",
-    "Line2D, or as a geometric figure such as a Rectangle or Circle, or even\n",
-    "pieces of text.\n",
-    "• The composite artists are those graphic elements present in a chart\n",
-    "that are composed of several base elements, namely, the primitive\n",
-    "artists. Composite artists are for example the Axis, Ticks, Axes, and\n",
-    "Figures"
+    "Existem duas classes Artist: primitiva e composta.\n",
+    "\n",
+    "• Os artistas primitivos são objetos individuais que constituem a base elementos para formar uma representação gráfica em um gráfico, por exemplo, um Line2D, ou como uma figura geométrica como um retângulo ou círculo, ou mesmo pedaços de texto.\n",
+    "\n",
+    "• Os artistas compostos são aqueles elementos gráficos presentes em um gráfico que são compostos por vários elementos de base, a saber, o primitivo artistas. Os artistas compostos são, por exemplo, o Axis, Ticks, Axes e Figuras"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generally, working at this level you will have to deal often with objects in higher\n",
-    "hierarchy as Figure, Axes, and Axis. So it is important to fully understand what these\n",
-    "objects are and what role they play within the graphical representation. Figure 7-4\n",
-    "shows the three main Artist objects (composite artists) that are generally used in all\n",
-    "implementations performed at this level."
+    "Geralmente, trabalhando neste nível você terá que lidar frequentemente com objetos em níveis mais altos\n",
+    "hierarquia como Figura, Eixos e Eixo. Portanto, é importante entender completamente o que esses\n",
+    "objetos são e qual o papel que eles desempenham dentro da representação gráfica. Figura 7-4\n",
+    "mostra os três principais objetos Artist (artistas compostos) que geralmente são usados em todos\n",
+    "implementações realizadas neste nível."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "• Figure is the object with the highest level in the hierarchy. It\n",
-    "corresponds to the entire graphical representation and generally can\n",
-    "contain many Axes.\n",
-    "• Axes is generally what you mean as plot or chart. Each Axis object\n",
-    "belongs to only one Figure, and is characterized by two Artist Axis\n",
-    "(three in the three-dimensional case). Other objects, such as the title,\n",
-    "the x label, and the y label, belong to this composite artist.\n",
-    "• Axis objects that take into account the numerical values to be\n",
-    "represented on Axes, define the limits and manage the ticks (the\n",
-    "mark on the axes) and tick labels (the label text represented on each\n",
-    "tick). The position of the tick is adjusted by an object called a Locator\n",
-    "while the formatting tick label is regulated by an object called a\n",
-    "Formatter."
+    "• Figura é o objeto com o nível mais alto na hierarquia. Isto\n",
+    "corresponde a toda a representação gráfica e geralmente pode\n",
+    "contém muitos eixos.\n",
+    "\n",
+    "• Eixos é geralmente o que você quer dizer com plotagem ou gráfico. Cada objeto do eixo pertence a apenas uma Figura, e é caracterizada por dois Eixos Artísticos (três no caso tridimensional). Outros objetos, como o título, o rótulo x e o rótulo y pertencem a este artista composto.\n",
+    "\n",
+    "• Objetos de eixo que levam em consideração os valores numéricos a serem representados em Eixos, definir os limites e gerenciar os ticks (o marca nos eixos) e rótulos de escala (o texto do rótulo representado em cada marcação). A posição do tick é ajustada por um objeto chamado Locator enquanto o rótulo do tick de formatação é regulado por um objeto chamado Formatador."
    ]
   },
   {
@@ -258,9 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Artist classes and their related functions (the matplotlib API) are particularly suitable to\n",
-    "all developers, especially for those who work on web application servers or develop the\n",
-    "GUI. But for purposes of calculation, and in particular for the analysis and visualization\n",
+    "Artist classes and their related functions (the matplotlib API) are particularly suitable to all developers, especially for those who work on web application servers or develop the GUI. But for purposes of calculation, and in particular for the analysis and visualization\n",
     "of data, the scripting layer is best. This layer consists of an interface called pyplot."
    ]
   },
