--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -195,15 +195,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Scripting Layer (pyplot)"
+    "#### Camada de script (pyplot)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Artist classes and their related functions (the matplotlib API) are particularly suitable to all developers, especially for those who work on web application servers or develop the GUI. But for purposes of calculation, and in particular for the analysis and visualization\n",
-    "of data, the scripting layer is best. This layer consists of an interface called pyplot."
+    "As classes Artist e suas funções relacionadas (a API matplotlib) são particularmente adequadas para todos os desenvolvedores, especialmente para aqueles que trabalham em servidores de aplicativos da Web ou desenvolvem a GUI. Mas para fins de cálculo e, em particular, para análise e visualização\n",
+    "de dados, a camada de script é a melhor. Essa camada consiste em uma interface chamada pyplot."
    ]
   },
   {
@@ -217,10 +217,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In general there is talk of pylab and pyplot. But what is the difference between these\n",
-    "two packages? Pylab is a module that is installed along with matplotlib, while pyplot\n",
-    "is an internal module of matplotlib. Often you will find references to one or the other\n",
-    "approach."
+    "Em geral, fala-se de pylab e pyplot. Mas qual é a diferença entre esses\n",
+    "dois pacotes? Pylab é um módulo instalado junto com matplotlib, enquanto pyplot\n",
+    "é um módulo interno do matplotlib. Muitas vezes você encontrará referências a um ou outro\n",
+    "abordagem."
    ]
   },
   {
