--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -202,8 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As classes Artist e suas funções relacionadas (a API matplotlib) são particularmente adequadas para todos os desenvolvedores, especialmente para aqueles que trabalham em servidores de aplicativos da Web ou desenvolvem a GUI. Mas para fins de cálculo e, em particular, para análise e visualização\n",
-    "de dados, a camada de script é a melhor. Essa camada consiste em uma interface chamada pyplot."
+    "As classes Artist e suas funções relacionadas (a API matplotlib) são particularmente adequadas para todos os desenvolvedores, especialmente para aqueles que trabalham em servidores de aplicativos da Web ou desenvolvem a GUI. Mas para fins de cálculo e, em particular, para análise e visualização de dados, a camada de script é a melhor. Essa camada consiste em uma interface chamada pyplot."
    ]
   },
   {
@@ -217,10 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Em geral, fala-se de pylab e pyplot. Mas qual é a diferença entre esses\n",
-    "dois pacotes? Pylab é um módulo instalado junto com matplotlib, enquanto pyplot\n",
-    "é um módulo interno do matplotlib. Muitas vezes você encontrará referências a um ou outro\n",
-    "abordagem."
+    "Em geral, fala-se de pylab e pyplot. Mas qual é a diferença entre esses dois pacotes? Pylab é um módulo instalado junto com matplotlib, enquanto pyplot é um módulo interno do matplotlib. Muitas vezes você encontrará referências a um ou outro abordagem."
    ]
   },
   {
@@ -239,10 +235,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pylab combines the functionality of pyplot with the capabilities of NumPy in a single\n",
-    "namespace, and therefore you do not need to import NumPy separately. Furthermore,\n",
-    "if you import pylab, pyplot and NumPy functions can be called directly without any\n",
-    "reference to a module (namespace), making the environment more similar to MATLAB."
+    "O Pylab combina a funcionalidade do pyplot com os recursos do NumPy em um único\n",
+    "namespace e, portanto, você não precisa importar o NumPy separadamente. Além disso,\n",
+    "se você importar as funções pylab, pyplot e NumPy podem ser chamadas diretamente sem qualquer\n",
+    "referência a um módulo (namespace), tornando o ambiente mais semelhante ao MATLAB."
    ]
   },
   {
@@ -255,18 +251,18 @@
     "array([1,2,3,4])\n",
     "# Instead of\n",
     "plt.plot()\n",
-    "np.array([1,2,3,4]"
+    "np.array([1,2,3,4])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The pyplot package provides the classic Python interface for programming the\n",
-    "matplotlib library, has its own namespace, and requires the import of the NumPy\n",
-    "package separately. This approach is the one chosen for this book; it is the main topic of\n",
-    "this chapter; and it will be used for the rest of the book. In fact this choice is shared and\n",
-    "approved by most Python developers."
+    "O pacote pyplot fornece a interface Python clássica para programar o\n",
+    "biblioteca matplotlib, tem seu próprio namespace e requer a importação do NumPy\n",
+    "pacote separadamente. Essa abordagem é a escolhida para este livro; é o assunto principal\n",
+    "este capítulo; e será usado para o resto do livro. Na verdade, essa escolha é compartilhada e\n",
+    "aprovado pela maioria dos desenvolvedores Python."
    ]
   },
   {
