--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -235,10 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O Pylab combina a funcionalidade do pyplot com os recursos do NumPy em um único\n",
-    "namespace e, portanto, você não precisa importar o NumPy separadamente. Além disso,\n",
-    "se você importar as funções pylab, pyplot e NumPy podem ser chamadas diretamente sem qualquer\n",
-    "referência a um módulo (namespace), tornando o ambiente mais semelhante ao MATLAB."
+    "O Pylab combina a funcionalidade do pyplot com os recursos do NumPy em um único namespace e, portanto, você não precisa importar o NumPy separadamente. Além disso, se você importar as funções pylab, pyplot e NumPy podem ser chamadas diretamente sem qualquer referência a um módulo (namespace), tornando o ambiente mais semelhante ao MATLAB."
    ]
   },
   {
@@ -258,11 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O pacote pyplot fornece a interface Python clássica para programar o\n",
-    "biblioteca matplotlib, tem seu próprio namespace e requer a importação do NumPy\n",
-    "pacote separadamente. Essa abordagem é a escolhida para este livro; é o assunto principal\n",
-    "este capítulo; e será usado para o resto do livro. Na verdade, essa escolha é compartilhada e\n",
-    "aprovado pela maioria dos desenvolvedores Python."
+    "O pacote pyplot fornece a interface Python clássica para programar o biblioteca matplotlib, tem seu próprio namespace e requer a importação do NumPy pacote separadamente. Essa abordagem é a escolhida para este livro; é o assunto principal este capítulo; e será usado para o resto do livro. Na verdade, essa escolha é compartilhada e aprovado pela maioria dos desenvolvedores Python."
    ]
   },
   {
