--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -262,6 +262,158 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### pyplot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The pyplot module is a collection of command-style functions that allow you to use\n",
+    "matplotlib much like MATLAB. Each pyplot function will operate or make some changes\n",
+    "to the Figure object, for example, the creation of the Figure itself, the creation of a\n",
+    "plotting area, representation of a line, decoration of the plot with a label, etc.\n",
+    "\n",
+    "Pyplot also is stateful, in that it tracks the status of the current figure and its plotting\n",
+    "area. The functions called act on the current figure."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A Simple Interactive Chart"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To get familiar with the matplotlib library and in a particular way with Pyplot, you will\n",
+    "start creating a simple interactive chart. Using matplotlib, this operation is very simple;\n",
+    "in fact, you can achieve it using only three lines of code.\n",
+    "\n",
+    "But first you need to import the pyplot package and rename it as plt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Python, the constructors generally are not necessary; everything is already\n",
+    "implicitly defined. In fact when you import the package, the plt object with all its\n",
+    "graphics capabilities have already been instantiated and ready to use. In fact, you simply\n",
+    "use the plot() function to pass the values to be plotted."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
