--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -318,17 +318,47 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Thus, you can simply pass the values that you want to represent as a sequence of\n",
+    "integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot([1,2,3,4])"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "As you can see, a Line2D object has been generated. The object is a line that\n",
+    "represents the linear trend of the points included in the chart.\n",
+    "\n",
+    "Now it is all set. You just have to give the command to show the plot using the show()\n",
+    "function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The result will be the one shown in Figure 7-5. It looks just a window, called the\n",
+    "plotting window, with a toolbar and the plot represented within it, just as with MATLAB."
+   ]
   },
   {
    "cell_type": "markdown",
