--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -363,22 +363,49 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### The Plotting Window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.plot([1,2,3,4])\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "If you are using the IPython QtConsole, you may have noticed that after calling the\n",
+    "plot() function the chart is displayed directly without explicitly invoking the show()\n",
+    "function (see Figure 7-6)."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "If you pass only a list of numbers or an array to the plt.plot() function, matplotlib\n",
+    "assumes it is the sequence of y values of the chart, and it associates them to the natural\n",
+    "sequence of values x: 0,1,2,3, ... ."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Generally a plot represents value pairs (x, y), so if you want to define a chart\n",
+    "correctly, you must define two arrays, the first containing the values on the x-axis and\n",
+    "the second containing the values on the y-axis. Moreover, the plot() function can\n",
+    "accept a third argument, which describes the specifics of how you want the point to be\n",
+    "represented on the chart."
+   ]
   },
   {
    "cell_type": "markdown",
