--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -410,17 +410,48 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Set the Properties of the Plot"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "As you can see in Figure 7-6, the points were represented by a blue line. In fact, if you do\n",
+    "not specify otherwise, the plot is represented taking into account a default configuration\n",
+    "of the plt.plot() function:\n",
+    "\n",
+    "• The size of the axes matches perfectly with the range of the input data\n",
+    "• There is neither a title nor axis labels\n",
+    "• There is no legend\n",
+    "• A blue line connecting the points is drawn\n",
+    "\n",
+    "Therefore you need to change this representation to have a real plot in which each\n",
+    "pair of values (x, y) is represented by a red dot (see Figure 7-7).\n",
+    "\n",
+    "If you’re working on IPython, close the window to get back to the active prompt for\n",
+    "entering new commands. Then you have to call back the show() function to observe the\n",
+    "changes made to the plot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot([1,2,3,4],[1,4,9,16],'ro')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Instead, if you’re working on Jupyter QtConsole you see a different plot for each new\n",
+    "command you enter."
+   ]
   },
   {
    "cell_type": "markdown",
