--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -456,27 +456,57 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "You can define the range both on the x-axis and on the y-axis by defining the details\n",
+    "of a list [xmin, xmax, ymin, ymax] and then passing it as an argument to the axis()\n",
+    "function."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "You can set several properties, one of which is the title that can be entered using the\n",
+    "title() function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.axis([0,5,0,20])\n",
+    "plt.title('My first plot')\n",
+    "plt.plot([1,2,3,4],[1,4,9,16],'ro')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In Figure 7-8 you can see how the new settings made the plot more readable. In\n",
+    "fact, the end points of the dataset are now represented within the plot rather than at the\n",
+    "edges. Also the title of the plot is now visible at the top."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### matplotlib and NumPy"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Even the matplot library, despite being a fully graphical library, has its foundation as\n",
+    "the NumPy library. In fact, you have seen so far how to pass lists as arguments, both to\n",
+    "represent the data and to set the extremes of the axes. Actually, these lists have been\n",
+    "converted internally in NumPy arrays.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
