--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -505,13 +505,46 @@
     "the NumPy library. In fact, you have seen so far how to pass lists as arguments, both to\n",
     "represent the data and to set the extremes of the axes. Actually, these lists have been\n",
     "converted internally in NumPy arrays.\n",
-    "\n"
+    "\n",
+    "Therefore, you can directly enter NumPy arrays as input data. This array of data,\n",
+    "which have been processed by pandas, can be directly used with matplotlib without\n",
+    "further processing.\n",
+    "\n",
+    "As an example, you see how it is possible to plot three different trends in the same\n",
+    "plot (see Figure 7-9). You can choose for this example the sin() function belonging to\n",
+    "the math module. So you will need to import it. To generate points following a sinusoidal\n",
+    "trend, you will use the NumPy library. Generate a series of points on the x-axis using the\n",
+    "arange() function, while for the values on the y-axis you will use the map() function to\n",
+    "apply the sin() function on all the items of the array (without using a for loop)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "\n",
+    "t = np.arange(0,2.5,0.1)\n",
+    "y1 = np.sin(math.pi*t)\n",
+    "y2 = np.sin(math.pi*t+math.pi/2)\n",
+    "y3 = np.sin(math.pi*t-math.pi/2)\n",
+    "plt.plot(t,y1,'b*',t,y2,'g^',t,y3,'ys')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "As you can see in Figure 7-9, the plot represents the three different temporal trends\n",
+    "with three different colors and markers. In these cases, when the trend of a function is\n",
+    "so obvious, the plot is perhaps not the most appropriate representation, but it is better\n",
+    "to use the lines (see Figure 7-10). To differentiate the three trends with something other\n",
+    "than color, you can use the pattern composed of different combinations of dots and\n",
+    "dashes ( - and . )."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -545,8 +578,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.5"
   },
   "orig_nbformat": 4
  },
