--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -547,6 +547,79 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(t,y1,'b--',t,y2,'g',t,y3,'r-.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using the kwargs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The objects that make up a chart have many attributes that characterize them. These\n",
+    "attributes are all default values, but can be set through the use of keyword args, often\n",
+    "referred as kwargs.\n",
+    "\n",
+    "These keywords are passed as arguments to functions. In reference documentation\n",
+    "of the various functions of the matplotlib library, you will always find them referred to as\n",
+    "kwargs in the last position. For example the plot() function that you are using in these\n",
+    "examples is referred to in the following way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matplotlib.pyplot.plot(*args, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot([1,2,4,2,1,0,1,2,1,4],linewidth=2.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
