--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -597,12 +597,52 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Working with Multiple Figures and Axes"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "So far you have seen how all pyplot commands are routed to the display of a single figure.\n",
+    "Actually, matplotlib allows you to manage multiple figures simultaneously, and within\n",
+    "each figure, it offers the ability to view different plots defined as subplots.\n",
+    "\n",
+    "So when you are working with pyplot, you must always keep in mind the concept of\n",
+    "the current Figure and current Axes (that is, the plot shown within the figure).\n",
+    "\n",
+    "Now you will see an example where two subplots are represented in a single figure.\n",
+    "The subplot() function, in addition to subdividing the figure in different drawing areas,\n",
+    "is used to focus the commands on a specific subplot.\n",
+    "\n",
+    "The argument passed to the subplot() function sets the mode of subdivision and\n",
+    "determines which is the current subplot. The current subplot will be the only figure\n",
+    "that will be affected by the commands. The argument of the subplot() function is\n",
+    "composed of three integers. The first number defines how many parts the figure is split\n",
+    "into vertically. The second number defines how many parts the figure is divided into\n",
+    "horizontally. The third issue selects which is the current subplot on which you can direct\n",
+    "commands.\n",
+    "\n",
+    "Now you will display two sinusoidal trends (sine and cosine) and the best way to do\n",
+    "that is to divide the canvas vertically in two horizontal subplots (as shown in Figure 7-12).\n",
+    "So the numbers to pass as an argument are 211 and 212."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = np.arange(0,5,0.1)\n",
+    "... : y1 = np.sin(2*np.pi*t)\n",
+    "... : y2 = np.sin(2*np.pi*t)\n",
+    "In [12]: plt.subplot(211)\n",
+    "...: plt.plot(t,y1,'b-.')\n",
+    "...: plt.subplot(212)\n",
+    "...: plt.plot(t,y2,'r--')"
+   ]
   },
   {
    "cell_type": "markdown",
