--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -636,18 +636,39 @@
    "outputs": [],
    "source": [
     "t = np.arange(0,5,0.1)\n",
-    "... : y1 = np.sin(2*np.pi*t)\n",
-    "... : y2 = np.sin(2*np.pi*t)\n",
-    "In [12]: plt.subplot(211)\n",
-    "...: plt.plot(t,y1,'b-.')\n",
-    "...: plt.subplot(212)\n",
-    "...: plt.plot(t,y2,'r--')"
+    "y1 = np.sin(2*np.pi*t)\n",
+    "y2 = np.sin(2*np.pi*t)\n",
+    "\n",
+    "plt.subplot(211)\n",
+    "plt.plot(t,y1,'b-.')\n",
+    "plt.subplot(212)\n",
+    "plt.plot(t,y2,'r--')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Now you do the same thing by dividing the figure in two vertical subplots. The\n",
+    "numbers to be passed as arguments to the subplot() function are 121 and 122\n",
+    "(as shown in Figure 7-13)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = np.arange(0.,1.,0.05)\n",
+    "y1 = np.sin(2*np.pi*t)\n",
+    "y2 = np.cos(2*np.pi*t)\n",
+    "\n",
+    "plt.subplot(121)\n",
+    "...: plt.plot(t,y1,'b-.')\n",
+    "...: plt.subplot(122)\n",
+    "...: plt.plot(t,y2,'r--')"
+   ]
   },
   {
    "cell_type": "markdown",
