--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -665,30 +665,47 @@
     "y2 = np.cos(2*np.pi*t)\n",
     "\n",
     "plt.subplot(121)\n",
-    "...: plt.plot(t,y1,'b-.')\n",
-    "...: plt.subplot(122)\n",
-    "...: plt.plot(t,y2,'r--')"
+    "plt.plot(t,y1,'b-.')\n",
+    "plt.subplot(122)\n",
+    "plt.plot(t,y2,'r--')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Adding Elements to the Chart"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In order to make a chart more informative, many times it is not enough to represent the\n",
+    "data using lines or markers and assign the range of values using two axes. In fact, there\n",
+    "are many other elements that can be added to a chart in order to enrich it with additional\n",
+    "information.\n",
+    "\n",
+    "In this section you will see how to add elements to the chart as text labels, a legend,\n",
+    "and so on."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Adding Text"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "You’ve already seen how you can add the title to a chart with the title() function. Two\n",
+    "other textual indications you can add the axis labels. This is possible through the use of\n",
+    "two other specific functions, called xlabel() and ylabel(). These functions take as an\n",
+    "argument a string, which will be the shown text."
+   ]
   },
   {
    "cell_type": "markdown",
