--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -753,12 +753,49 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "But matplotlib is not limited to this: pyplot allows you to add text to any position\n",
+    "within a chart. This feature is performed by a specific function called text()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text(x,y,s, fontdict=None, **kwargs)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The first two arguments are the coordinates of the location where you want to place\n",
+    "the text. s is the string of text to be added, and fontdict (optional) is the font that you\n",
+    "want to use. Finally, you can add the keywords.\n",
+    "\n",
+    "Add the label to each point of the plot. Because the first two arguments to the text()\n",
+    "function are the coordinates of the graph, you have to use the coordinates of the four\n",
+    "points of the plot shifted slightly on the y-axis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.axis([0,5,0,20])\n",
+    "...: plt.title('My first plot',fontsize=20,fontname='Times New Roman')\n",
+    "...: plt.xlabel('Counting',color='gray')\n",
+    "...: plt.ylabel('Square values',color='gray')\n",
+    "...: plt.text(1,1.5,'First')\n",
+    "...: plt.text(2,4.5,'Second')\n",
+    "...: plt.text(3,9.5,'Third')\n",
+    "...: plt.text(4,16.5,'Fourth')\n",
+    "...: plt.plot([1,2,3,4],[1,4,9,16],'ro')"
+   ]
   },
   {
    "cell_type": "markdown",
