--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -787,6 +787,45 @@
    "outputs": [],
    "source": [
     "plt.axis([0,5,0,20])\n",
+    "plt.title('My first plot',fontsize=20,fontname='Times New Roman')\n",
+    "plt.xlabel('Counting',color='gray')\n",
+    "plt.ylabel('Square values',color='gray')\n",
+    "plt.text(1,1.5,'First')\n",
+    "plt.text(2,4.5,'Second')\n",
+    "plt.text(3,9.5,'Third')\n",
+    "plt.text(4,16.5,'Fourth')\n",
+    "plt.plot([1,2,3,4],[1,4,9,16],'ro')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since matplotlib is a graphics library designed to be used in scientific circles, it\n",
+    "must be able to exploit the full potential of scientific language, including mathematical\n",
+    "expressions. matplotlib offers the possibility to integrate LaTeX expressions, thereby\n",
+    "allowing you to insert mathematical expressions within the chart.\n",
+    "\n",
+    "To do this, you can add a LaTeX expression to the text, enclosing it between two $\n",
+    "characters. The interpreter will recognize them as LaTeX expressions and convert them\n",
+    "to the corresponding graphic, which can be a mathematical expression, a formula,\n",
+    "mathematical characters, or just Greek letters. Generally you have to precede the string\n",
+    "containing LaTeX expressions with an r, which indicates raw text, in order to avoid\n",
+    "unintended escape sequences.\n",
+    "\n",
+    "Here, you can also use the keywords to further enrich the text to be shown in the\n",
+    "plot. Therefore, as an example, you can add the formula describing the trend followed by\n",
+    "the point of the plot and enclose it in a colored bounding box\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.axis([0,5,0,20])\n",
     "...: plt.title('My first plot',fontsize=20,fontname='Times New Roman')\n",
     "...: plt.xlabel('Counting',color='gray')\n",
     "...: plt.ylabel('Square values',color='gray')\n",
@@ -794,13 +833,10 @@
     "...: plt.text(2,4.5,'Second')\n",
     "...: plt.text(3,9.5,'Third')\n",
     "...: plt.text(4,16.5,'Fourth')\n",
+    "...: plt.text(1.1,12,r'$y = x^2$',fontsize=20,bbox={'facecolor':'yellow',\n",
+    "'alpha':0.2})\n",
     "...: plt.plot([1,2,3,4],[1,4,9,16],'ro')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
